# dpm

./: .gitignore  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh  dpm-gui.py  dpm.py  dpm.yaml  gen-types.sh  install.sh  pyproject.toml  requirements-gui.txt  requirements-service.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agent/: README.md  agent.py  agent.yaml  documentation.md  dpm-agent.service  install_dpm_agent.sh
controller/: __init__.py  controller.py
debian/: 99-dpm-realtime.conf  changelog  control  dpm-agent.install  dpm-agent.postinst  dpm-agent.postrm  dpm-agent.prerm  dpm-agent.service  dpm-gui.desktop  dpm-tools.install  dpm.yaml  dpmd.postinst  dpmd.prerm  dpmd.service  rules
docs/: architecture.md  cli.md  code-inspection.md  configuration.md  deployment.md  launch-files.md  processes.md
dpm-pyqt5-gui/: README.md  requirements.txt
dpm_msg/: host_procs_t.py
gui/: README.md  __init__.py  main.py  process_dialog.py  process_form.py
lcm/: command_t.lcm  host_info_t.lcm  host_procs_t.lcm  log_chunk_t.lcm  proc_info_t.lcm  proc_output_t.lcm
lcmtypes/: command_t.lcm  host_info_t.lcm  host_procs_t.lcm  proc_info_t.lcm  proc_output_t.lcm
logs/: stress_pids.json
master/: README.md  dpm.py  master.py
node/: README.md  __init__.py  dpm-node.service  install_dpm_node.sh  node.py
saved/: processes.yml
scripts/: README-desktop.md  dpm-gui  dpm-tui  install  install-desktop-entry.sh  install-dpm-node.sh
tests/: conftest.py
tui/: forms.py  (+4 more)
(+100 files in other folders)
